--- a/app/src/main/res/layout/chat_bubble_media.xml
+++ b/app/src/main/res/layout/chat_bubble_media.xml
@@ -31,16 +31,16 @@
 		</androidx.cardview.widget.CardView>
 		<LinearLayout
 			android:id="@+id/message_layout"
-			android:layout_width="0dp"
+			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_weight="1"
 			android:orientation="vertical">
 			<LinearLayout
 				android:id="@+id/messageBG"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:maxWidth="@dimen/message_bubble_max_width"
 			android:layout_marginLeft="0dp"
-				android:layout_marginTop="2dp"
+				android:layout_marginTop="@dimen/message_vertical_spacing"
 			android:layout_marginRight="0dp"
 				android:layout_marginBottom="2dp"
 				android:paddingLeft="4dp"
@@ -198,31 +198,33 @@
 						android:autoLink="all"
 						android:textColorLink="#FFFF00" />
 				</com.synapse.social.studioasinc.animations.ShimmerFrameLayout>
-			</LinearLayout>
-			<LinearLayout
-				android:id="@+id/my_message_info"
-				android:layout_width="wrap_content"
-				android:layout_height="16dp"
-				android:layout_marginRight="8dp"
-				android:gravity="right|center_vertical"
-				android:orientation="horizontal"
-				android:layout_gravity="right">
-				<TextView
-					android:id="@+id/date"
-					android:focusable="false"
+				<!-- Metadata moved inside bubble -->
+				<LinearLayout
+					android:id="@+id/my_message_info"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:layout_marginRight="4dp"
-					android:text="00:00"
-					android:textSize="12sp"
-					android:textColor="#000000" />
-				<ImageView
-					android:id="@+id/message_state"
-					android:focusable="false"
-					android:layout_width="14dp"
-					android:layout_height="14dp"
-					android:src="@drawable/ic_check_black"
-					android:scaleType="centerInside" />
+					android:layout_marginTop="4dp"
+					android:layout_marginRight="8dp"
+					android:gravity="right|center_vertical"
+					android:orientation="horizontal"
+					android:layout_gravity="end">
+					<TextView
+						android:id="@+id/date"
+						android:focusable="false"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:layout_marginRight="4dp"
+						android:text="00:00"
+						android:textSize="11sp"
+						android:textColor="#000000" />
+					<ImageView
+						android:id="@+id/message_state"
+						android:focusable="false"
+						android:layout_width="14dp"
+						android:layout_height="14dp"
+						android:src="@drawable/ic_check_black"
+						android:scaleType="centerInside" />
+				</LinearLayout>
 			</LinearLayout>
 		</LinearLayout>
 	</LinearLayout>
