--- a/app/src/main/res/anim/pulse.xml
+++ b/app/src/main/res/anim/pulse.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-    android:repeatCount="infinite"
-    android:repeatMode="reverse">
-    
+    android:interpolator="@android:anim/decelerate_interpolator">
     <scale
-        android:duration="1000"
+        android:duration="800"
         android:fromXScale="1.0"
         android:fromYScale="1.0"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:toXScale="1.05"
-        android:toYScale="1.05" />
-    
+        android:repeatCount="infinite"
+        android:repeatMode="reverse"
+        android:toXScale="1.1"
+        android:toYScale="1.1" />
     <alpha
-        android:duration="1000"
+        android:duration="800"
         android:fromAlpha="1.0"
-        android:toAlpha="0.7" />
+        android:repeatCount="infinite"
+        android:repeatMode="reverse"
+        android:toAlpha="0.5" />
 </set>
