--- a/app/src/main/res/layout/chat_bubble_text.xml
+++ b/app/src/main/res/layout/chat_bubble_text.xml
@@ -31,11 +31,16 @@
 				android:src="@drawable/avatar"
 				android:scaleType="centerCrop" />
 		</androidx.cardview.widget.CardView>
-		<LinearLayout
+		<FrameLayout
 			android:id="@+id/message_layout"
-			android:layout_width="wrap_content"
+			android:layout_width="0dp"
 			android:layout_height="wrap_content"
-			android:orientation="vertical">
+			android:layout_weight="1">
+			<LinearLayout
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_gravity="start"
+				android:orientation="vertical">
 			<LinearLayout
 				android:id="@+id/menuView_d"
 				android:layout_width="match_parent"
@@ -242,6 +247,7 @@
 						android:scaleType="centerInside" />
 				</LinearLayout>
 			</LinearLayout>
-		</LinearLayout>
+			</LinearLayout>
+		</FrameLayout>
 	</LinearLayout>
 </LinearLayout>
