--- a/app/src/main/res/layout/chat_bubble_video.xml
+++ b/app/src/main/res/layout/chat_bubble_video.xml
@@ -9,8 +9,8 @@
 		android:id="@+id/body"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:paddingLeft="0dp"
-		android:paddingRight="0dp"
+		android:paddingLeft="8dp"
+		android:paddingRight="8dp"
 		android:orientation="horizontal">
 		<androidx.cardview.widget.CardView
 			android:id="@+id/mProfileCard"
@@ -29,11 +29,16 @@
 				android:src="@drawable/avatar"
 				android:scaleType="centerCrop" />
 		</androidx.cardview.widget.CardView>
-		<LinearLayout
+		<FrameLayout
 			android:id="@+id/message_layout"
-			android:layout_width="wrap_content"
+			android:layout_width="0dp"
 			android:layout_height="wrap_content"
-			android:orientation="vertical">
+			android:layout_weight="1">
+			<LinearLayout
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_gravity="start"
+				android:orientation="vertical">
 			<LinearLayout
 				android:id="@+id/messageBG"
 				android:layout_width="wrap_content"
@@ -275,6 +280,7 @@
 						android:scaleType="centerInside" />
 				</LinearLayout>
 			</LinearLayout>
-		</LinearLayout>
+			</LinearLayout>
+		</FrameLayout>
 	</LinearLayout>
 </LinearLayout>
