--- a/app/src/main/res/layout/chat_bubble_error.xml
+++ b/app/src/main/res/layout/chat_bubble_error.xml
@@ -11,9 +11,8 @@
 
     <FrameLayout
         android:id="@+id/message_layout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="wrap_content"
