--- a/app/src/main/res/layout/chat_bubble_voice.xml
+++ b/app/src/main/res/layout/chat_bubble_voice.xml
@@ -32,9 +32,8 @@
 		</androidx.cardview.widget.CardView>
 		<FrameLayout
 			android:id="@+id/message_layout"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:layout_weight="1">
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content">
 			<LinearLayout
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
