--- a/app/src/main/res/layout/chat_bubble_voice.xml
+++ b/app/src/main/res/layout/chat_bubble_voice.xml
@@ -92,9 +92,8 @@
 				android:paddingRight="12dp"
 				android:paddingBottom="10dp"
 				android:background="@android:color/transparent"
-				android:clickable="true"
-				android:focusable="true"
-				android:foreground="?attr/selectableItemBackgroundBorderless"
+				android:clickable="false"
+				android:focusable="false"
 				android:orientation="vertical">
 				<!-- Deleted message placeholder -->
 				<LinearLayout
