--- a/app/src/main/res/layout/chat_bubble_link_preview.xml
+++ b/app/src/main/res/layout/chat_bubble_link_preview.xml
@@ -51,9 +51,8 @@
 				android:paddingRight="12dp"
 				android:paddingBottom="10dp"
 				android:background="#00000000"
-				android:clickable="true"
-				android:focusable="true"
-				android:foreground="?attr/selectableItemBackgroundBorderless"
+				android:clickable="false"
+				android:focusable="false"
 				android:orientation="vertical"
 				android:animateLayoutChanges="true">
 				<!-- Username for group chats -->
