--- a/app/src/main/res/layout/chat_bubble_video.xml
+++ b/app/src/main/res/layout/chat_bubble_video.xml
@@ -51,6 +51,8 @@
 				android:paddingRight="4dp"
 				android:paddingBottom="8dp"
 				android:background="@android:color/transparent"
+				android:clickable="false"
+				android:focusable="false"
 				android:orientation="vertical">
 				<!-- Username for group chats -->
 				<TextView
