--- a/app/src/main/res/drawable/ic_forward.xml
+++ b/app/src/main/res/drawable/ic_forward.xml
@@ -1,11 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="960"
-    android:viewportHeight="960"
-    android:tint="?attr/colorControlNormal"
-    android:autoMirrored="true">
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M641.13,698.09L566.04,624L750.04,440L566.04,256L641.13,181.91L899.22,440L641.13,698.09ZM60.78,779.22L60.78,600Q60.78,511.91 123.24,449.46Q185.7,387 273.78,387L460.87,387L329.87,256L404.39,181.91L662.48,440L404.39,698.09L329.87,624L460.87,493L273.78,493Q228.87,493 197.83,524.04Q166.78,555.09 166.78,600L166.78,779.22L60.78,779.22Z"/>
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M4,18l8.5,-6L4,6V18zM13,6v12l8.5,-6L13,6z" />
 </vector>
