--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -65,6 +65,15 @@
         <item name="shapeAppearanceSmallComponent">@style/ShapeAppearance.Material3.Expressive.Small</item>
         <item name="shapeAppearanceMediumComponent">@style/ShapeAppearance.Material3.Expressive.Medium</item>
         <item name="shapeAppearanceLargeComponent">@style/ShapeAppearance.Material3.Expressive.Large</item>
+        
+        <!-- Post Card Theme Attributes -->
+        <item name="postCardBackgroundColor">?attr/colorSurfaceContainerLow</item>
+        <item name="postCardContentColor">?attr/colorOnSurface</item>
+        <item name="postCardSecondaryContentColor">?attr/colorOnSurfaceVariant</item>
+        <item name="postCardActionColor">?attr/colorOnSurfaceVariant</item>
+        <item name="postCardLikeColor">?attr/colorOnSurfaceVariant</item>
+        <item name="postCardLikedColor">?attr/colorError</item>
+        <item name="postCardShimmerColor">?attr/colorSurfaceVariant</item>
     </style>
     <!--All additional styles from themes.xml-->
     <style name="AppTheme.FullScreen" parent="AppTheme">
