--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -208,4 +208,8 @@
     <color name="video_duration_bg">#757575</color>
     <color name="border_color">#42A5F5</color>
     <color name="rocket_pay_accent">#F06292</color>
+    
+    <!-- Message Bubble Colors -->
+    <color name="sent_message_background">@color/md_theme_primaryContainer</color>
+    <color name="received_message_background">@color/md_theme_surfaceVariant</color>
 </resources>
