--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -226,4 +226,8 @@
     <color name="waveform_color">#C5C8BA</color>
     <color name="waveform_progress_color">@color/md_theme_primary</color>
     <color name="waveform_background">#F3F4E9</color>
+    
+    <!-- Message Bubble Colors -->
+    <color name="sent_message_background">@color/md_theme_primaryContainer</color>
+    <color name="received_message_background">@color/md_theme_surfaceVariant</color>
 </resources>
